--- a/example/bolls/index.html
+++ b/example/bolls/index.html
@@ -5,6 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Page</title>
+    <link rel="icon" type="image/x-icon" href="../bolls/Kirbo.png">
+    <meta name="author" content="YOLO-GIT">
+    <meta name="keywords" content="puasa, save link, nak tahu pasal puasa, web puasa">
+    <meta name="description" content="Puasa. Orang Melayu mesti tahu tentang ini.">
+    <meta http-equiv="refresh" content="120">
+    <!-- Add Open Graph tags for better social media sharing -->
+    <meta property="og:title" content="Ramadan">
+    <meta property="og:description" content="Puasa. Orang Melayu mesti tahu tentang ini.">
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="../bolls/Kirbo.png" />
     <link href="../src/output.css" rel="stylesheet">
 </head>
 
