--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parallax Page</title>
-    <link rel="icon" type="image/x-icon" href="../bolls/Kirbo.png">
+    <link rel="icon" type="image/x-icon" href="example/bolls/Kirbo.png">
     <meta name="author" content="YOLO-GIT">
     <meta name="keywords" content="puasa, save link, nak tahu pasal puasa, web puasa">
     <meta name="description" content="Puasa. Orang Melayu mesti tahu tentang ini.">
@@ -14,32 +14,32 @@
     <meta property="og:title" content="Ramadan">
     <meta property="og:description" content="Puasa. Orang Melayu mesti tahu tentang ini.">
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="../bolls/Kirbo.png" />
-    <link href="../src/output.css" rel="stylesheet">
+    <meta property="og:image" content="example/bolls/Kirbo.png" />
+    <link href="example/src/output.css" rel="stylesheet">
 </head>
 
 <body class="overflow-x-hidden">
     <nav class="bg-gray-900">
         <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
-            <a href="https://flowbite.com/" class="flex items-center space-x-3 rtl:space-x-reverse">
-                <img src="Kirbo.png" class="h-8" alt="Flowbite Logo" />
+            <div class="flex items-center space-x-3 rtl:space-x-reverse">
+                <img src="example/bolls/Kirbo.png" class="h-8" alt="Flowbite Logo" />
                 <span class="self-center text-2xl font-semibold whitespace-nowrap text-white italic">Ramadan</span>
-            </a>
+            </div>
         </div>
     </nav>
 
     <section class="parallax_mobile sm:parallax">
         <div class="">
             <!-- <img src="" id="struktur" alt="structure"> -->
-            <img src="Another Design/new_bg.png" id="bg" alt="bg">
-            <img src="Another Design/shadow_left.png" id="shadow_left" alt="shadow_left">
-            <img src="Another Design/shadow_right.png" id="shadow_right" alt="shadow_right">
-            <img src="Another Design/13405423_5238218-ai.png" id="ayat" alt="ayat">
-            <img src="Another Design/kiri.png" id="kiri" alt="kiri">
-            <img src="Another Design/kanan.png" id="kanan" alt="kanan">
-            <img src="Another Design/top.png" id="atas" alt="atas">
-            <img src="Another Design/bottom.png" id="bottom" alt="bottom">
-            <img src="Another Design/lamp.png" id="lamp" alt="lamp">
+            <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg">
+            <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left">
+            <img src="example/bolls/Another Design/shadow_right.png" id="shadow_right" alt="shadow_right">
+            <img src="example/bolls/Another Design/13405423_5238218-ai.png" id="ayat" alt="ayat">
+            <img src="example/bolls/Another Design/kiri.png" id="kiri" alt="kiri">
+            <img src="example/bolls/Another Design/kanan.png" id="kanan" alt="kanan">
+            <img src="example/bolls/Another Design/top.png" id="atas" alt="atas">
+            <img src="example/bolls/Another Design/bottom.png" id="bottom" alt="bottom">
+            <img src="example/bolls/Another Design/lamp.png" id="lamp" alt="lamp">
         </div>
     </section>
 
@@ -116,37 +116,37 @@
         <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4
             mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="Card/card_1.png" alt="" />
+                <img class="rounded-t-lg" src="example/bolls/Card/card_1.png" alt="" />
             </div>
         </div>
         <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
             transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="Card/card_2.png" alt="" />
+                <img class="rounded-t-lg" src="example/bolls/Card/card_2.png" alt="" />
             </div>
         </div>
         <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
             transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="Card/card_3.png" alt="" />
+                <img class="rounded-t-lg" src="example/bolls/Card/card_3.png" alt="" />
             </div>
         </div>
         <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
             transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="Card/card_4.png" alt="" />
+                <img class="rounded-t-lg" src="example/bolls/Card/card_4.png" alt="" />
             </div>
         </div>
         <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4
             mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="Card/card_5.png" alt="" />
+                <img class="rounded-t-lg" src="example/bolls/Card/card_5.png" alt="" />
             </div>
         </div>
         <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
             transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="Card/card_6.png" alt="" />
+                <img class="rounded-t-lg" src="example/bolls/Card/card_6.png" alt="" />
             </div>
         </div>
     </section>
@@ -191,7 +191,7 @@
         <!-- some text if needed -->
         <video class="w-full h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:opacity-0"
             controls>
-            <source src="../HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4">
+            <source src="example/HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
 
@@ -277,8 +277,8 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
-    <script src="../node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="example/bolls/script.js"></script>
+    <script src="example/node_modules/flowbite/dist/flowbite.min.js"></script>
 </body>
 
 </html>
