--- a/index.html
+++ b/index.html
@@ -277,8 +277,11 @@
         </div>
     </footer>
 
-    <script src="example/bolls/script.js"></script>
+    <script>
+        console.log('Kelih2 gapo tuh migga XD 🤑🤑🤑')
+    </script>
     <script src="example/node_modules/flowbite/dist/flowbite.min.js"></script>
+    <script src="example/bolls/script.js"></script>
 </body>
 
 </html>
