Changes the Title

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Parallax Page</title>
+    <title>Ramadan</title>
     <link rel="icon" type="image/x-icon" href="example/bolls/Kirbo.png">
     <meta name="author" content="YOLO-GIT">
     <meta name="keywords" content="puasa, save link, nak tahu pasal puasa, web puasa">
