--- a/index.html
+++ b/index.html
@@ -2,20 +2,25 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ramadan</title>
-    <link rel="icon" type="image/x-icon" href="example/bolls/Kirbo.png">
-    <meta name="author" content="YOLO-GIT">
-    <meta name="keywords" content="puasa, save link, nak tahu pasal puasa, web puasa">
-    <meta name="description" content="Puasa. Orang Melayu mesti tahu tentang ini.">
-    <meta http-equiv="refresh" content="120">
+    <link rel="icon" type="image/x-icon" href="example/bolls/Kirbo.png" />
+    <meta name="author" content="YOLO-GIT" />
+    <meta name="keywords" content="puasa, save link, nak tahu pasal puasa, web puasa" />
+    <meta name="description" content="Puasa. Orang Melayu mesti tahu tentang ini." />
+    <meta http-equiv="refresh" content="120" />
     <!-- Add Open Graph tags for better social media sharing -->
-    <meta property="og:title" content="Ramadan">
-    <meta property="og:description" content="Puasa. Orang Melayu mesti tahu tentang ini.">
+    <meta property="og:title" content="Ramadan" />
+    <meta property="og:description" content="Puasa. Orang Melayu mesti tahu tentang ini." />
     <meta property="og:type" content="website" />
     <meta property="og:image" content="example/bolls/Kirbo.png" />
-    <link href="example/src/output.css" rel="stylesheet">
+    <!-- Other Graph Tags -->
+    <meta name="twitter:title" content="Ramadan" />
+    <meta name="twitter:description" content="Puasa. Orang Melayu mesti tahu tentang ini." />
+    <meta name="twitter:image" content="example/bolls/Kirbo.png" />
+    <meta name="twitter:card" content="Ramadan is here!" />
+    <link href="example/src/output.css" rel="stylesheet" />
 </head>
 
 <body class="overflow-x-hidden">
@@ -31,15 +36,15 @@
     <section class="parallax_mobile sm:parallax">
         <div class="">
             <!-- <img src="" id="struktur" alt="structure"> -->
-            <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg">
-            <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left">
-            <img src="example/bolls/Another Design/shadow_right.png" id="shadow_right" alt="shadow_right">
-            <img src="example/bolls/Another Design/13405423_5238218-ai.png" id="ayat" alt="ayat">
-            <img src="example/bolls/Another Design/kiri.png" id="kiri" alt="kiri">
-            <img src="example/bolls/Another Design/kanan.png" id="kanan" alt="kanan">
-            <img src="example/bolls/Another Design/top.png" id="atas" alt="atas">
-            <img src="example/bolls/Another Design/bottom.png" id="bottom" alt="bottom">
-            <img src="example/bolls/Another Design/lamp.png" id="lamp" alt="lamp">
+            <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
+            <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left" />
+            <img src="example/bolls/Another Design/shadow_right.png" id="shadow_right" alt="shadow_right" />
+            <img src="example/bolls/Another Design/13405423_5238218-ai.png" id="ayat" alt="ayat" />
+            <img src="example/bolls/Another Design/kiri.png" id="kiri" alt="kiri" />
+            <img src="example/bolls/Another Design/kanan.png" id="kanan" alt="kanan" />
+            <img src="example/bolls/Another Design/top.png" id="atas" alt="atas" />
+            <img src="example/bolls/Another Design/bottom.png" id="bottom" alt="bottom" />
+            <img src="example/bolls/Another Design/lamp.png" id="lamp" alt="lamp" />
         </div>
     </section>
 
@@ -106,45 +111,46 @@
             </div>
         </h2>
         <p class="text-xs text-center sm:text-lg sm:text-left text-white">
-            Semoga bulan suci ini membawa berkah, kedamaian, dan kebahagiaan untuk kita
-            semua. Mari kita manfaatkan setiap masa untuk berdoa, berbuat baik, dan mendekatkan diri kepada <span
-                class="font-extrabold italic hover:underline">Allah SWT</span>.
+            Semoga bulan suci ini membawa berkah, kedamaian, dan kebahagiaan untuk
+            kita semua. Mari kita manfaatkan setiap masa untuk berdoa, berbuat baik,
+            dan mendekatkan diri kepada
+            <span class="font-extrabold italic hover:underline">Allah SWT</span>.
         </p>
     </section>
 
     <section class="sec mx-7 mb-2 flex flex-wrap justify-center items-center sm:justify-start">
-        <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4
-            mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
+        <div
+            class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img class="rounded-t-lg" src="example/bolls/Card/card_1.png" alt="" />
             </div>
         </div>
-        <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
-            transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
+        <div
+            class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img class="rounded-t-lg" src="example/bolls/Card/card_2.png" alt="" />
             </div>
         </div>
-        <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
-            transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
+        <div
+            class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img class="rounded-t-lg" src="example/bolls/Card/card_3.png" alt="" />
             </div>
         </div>
-        <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
-            transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
+        <div
+            class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img class="rounded-t-lg" src="example/bolls/Card/card_4.png" alt="" />
             </div>
         </div>
-        <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4
-            mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
+        <div
+            class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img class="rounded-t-lg" src="example/bolls/Card/card_5.png" alt="" />
             </div>
         </div>
-        <div class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2
-            transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
+        <div
+            class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
                 <img class="rounded-t-lg" src="example/bolls/Card/card_6.png" alt="" />
             </div>
@@ -179,10 +185,11 @@
             </div>
         </h2>
         <p class="text-xs sm:text-lg text-center sm:text-left text-white">
-            Puasa (bahasa Arab: صوم) secara bahasanya boleh diertikan sebagai "menahan diri". Dari segi istilah syarak,
-            puasa bermaksud "<span class="italic font-light">menahan diri daripada makan, minum dan perkara-perkara yang
-                membatalkan puasa bermula dari
-                terbit fajar sidik sehingga terbenam matahari berserta niat</span>".
+            Puasa (bahasa Arab: صوم) secara bahasanya boleh diertikan sebagai
+            "menahan diri". Dari segi istilah syarak, puasa bermaksud "<span class="italic font-light">menahan diri
+                daripada makan, minum dan perkara-perkara yang
+                membatalkan puasa bermula dari terbit fajar sidik sehingga terbenam
+                matahari berserta niat</span>".
         </p>
     </section>
 
@@ -191,19 +198,19 @@
         <!-- some text if needed -->
         <video class="w-full h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:opacity-0"
             controls>
-            <source src="example/HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4">
+            <source src="example/HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4" />
             Your browser does not support the video tag.
         </video>
-
     </div>
 
     <section class="sec bg-slate-700">
-        <h2 class="text-xs sm:text-3xl text-center sm:text-left font-semibold text-white">Jangan Lupa Puasa :D</h2>
+        <h2 class="text-xs sm:text-3xl text-center sm:text-left font-semibold text-white">
+            Jangan Lupa Puasa :D
+        </h2>
         <p class="text-xs sm:text-lg text-center sm:text-left text-white">
-            Ramadan bukan hanya tentang menagan lapar, tapi juga tentang mengelola emosi dan isi hati. Semoga Ramadan
-            ini jadi pintu bagi kita untuk memperbaiki diri, <span class="font-semibold">
-                selamat berpuasa!
-            </span>
+            Ramadan bukan hanya tentang menagan lapar, tapi juga tentang mengelola
+            emosi dan isi hati. Semoga Ramadan ini jadi pintu bagi kita untuk
+            memperbaiki diri, <span class="font-semibold"> selamat berpuasa! </span>
         </p>
     </section>
 
@@ -278,7 +285,7 @@
     </footer>
 
     <script>
-        console.log('Kelih2 gapo tuh migga XD 🤑🤑🤑')
+        console.log("Kelih2 gapo tuh migga XD 🤑🤑🤑");
     </script>
     <script src="example/node_modules/flowbite/dist/flowbite.min.js"></script>
     <script src="example/bolls/script.js"></script>
