Some Changes Again

--- a/index.html
+++ b/index.html
@@ -194,7 +194,8 @@
     </section>
 
     <div
-        class="flex items-center justify-center h-80 bg-fixed sm:bg-parallax bg-cover bg-gradient-to-r from-blue-950 to-blue-500 background-animate">
+        class="flex items-center justify-center h-80 bg-fixed sm:bg-parallax bg-cover bg-gradient-to-r from-blue-950
+        to-blue-500 background-animate">
         <!-- some text if needed -->
         <video class="w-full h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:opacity-0"
             controls>
@@ -215,7 +216,7 @@
     </section>
 
     <!-- Contact Us -->
-    <section id="contact" class="py-16 bg-gradient-to-r from-green-500 to-blue-500 text-white">
+    <section id="contact" class="py-16 bg-gradient-to-r from-green-500 to-blue-500 text-white background-animate">
         <div class="max-w-6xl mx-auto">
             <div class="text-5xl text-center font-bold italic mb-8 line word fancy" id="channel-link">
                 <h2 class="uppercase">Socials</h2>
