--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:title" content="Ramadan" />
     <meta property="og:description" content="Puasa. Orang Melayu mesti tahu tentang ini." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="example/bolls/Kirbo.png" />
+    <meta property="og:image" content="../example/bolls/Kirbo.png" />
     <!-- Other Graph Tags -->
     <meta name="twitter:title" content="Ramadan" />
     <meta name="twitter:description" content="Puasa. Orang Melayu mesti tahu tentang ini." />
