--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         class="flex items-center justify-center h-80 bg-fixed sm:bg-parallax bg-cover bg-gradient-to-r from-blue-950
         to-blue-500 background-animate">
         <!-- some text if needed -->
-        <video class="w-full h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:opacity-0"
+        <video class="w-80 h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:opacity-0"
             controls>
             <source src="example/HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4" />
             Your browser does not support the video tag.
