--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </div>
     </nav>
 
-    <section class="parallax_mobile sm:parallax">
+    <section class="parallax_mid sm:parallax">
         <div class="">
             <!-- <img src="" id="struktur" alt="structure"> -->
             <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
