--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate sm:mt-2">
         <h2 class="text-xs text-center sm:text-3xl sm:text-left font-semibold text-white flex flex-row">
             <svg data-tooltip-target="tooltip-one" xmlns="http://www.w3.org/2000/svg"
-                class="w-28 h-28 sm:w-10 sm:h-10 mr-3" fill-rule="evenodd" clip-rule="evenodd"
+                class="w-28 h-28 md:w-10 md:h-10 sm:w-28 sm:h-28 mr-3" fill-rule="evenodd" clip-rule="evenodd"
                 image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
                 text-rendering="geometricPrecision" viewBox="0 0 6.827 6.827" id="islam">
                 <path fill-rule="nonzero"
@@ -81,7 +81,7 @@
             </div>
             Selamat datang bulan Ramadan!
             <svg data-tooltip-target="tooltip-two" xmlns="http://www.w3.org/2000/svg"
-                class="w-28 h-28 sm:w-10 sm:h-10 ml-3" fill-rule="evenodd" clip-rule="evenodd"
+                class="w-28 h-28 md:w-10 md:h-10 sm:w-28 sm:h-28 ml-3" fill-rule="evenodd" clip-rule="evenodd"
                 image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
                 text-rendering="geometricPrecision" viewBox="0 0 6.827 6.827" id="islam">
                 <path fill-rule="nonzero"
@@ -162,7 +162,7 @@
             Apa itu Puasa?
             <svg data-tooltip-target="tooltip-calendar" xmlns="http://www.w3.org/2000/svg"
                 enable-background="new 0 0 64 64" viewBox="0 0 64 64" id="ramadan-calendar"
-                class="w-20 h-20 sm:w-10 sm:h-10 ml-2">
+                class="w-20 h-20 md:w-10 md:h-10 sm:w-20 sm:h-20 ml-2">
                 <path fill="#eef" d="M58,17v35c0,2.761-2.239,5-5,5H11c-2.761,0-5-2.239-5-5V17H58z"></path>
                 <path fill="#02cfc4" d="M60,8v8c0,1.65-1.35,3-3,3H7c-1.65,0-3-1.35-3-3V8c0-1.65,1.35-3,3-3h6c0.01,0,0.01,0,0.02,0H57
 			C58.65,5,60,6.35,60,8z"></path>
@@ -193,8 +193,7 @@
         </p>
     </section>
 
-    <div
-        class="flex items-center justify-center h-80 bg-fixed sm:bg-parallax bg-cover bg-gradient-to-r from-blue-950
+    <div class="flex items-center justify-center h-80 bg-fixed sm:bg-parallax bg-cover bg-gradient-to-r from-blue-950
         to-blue-500 background-animate">
         <!-- some text if needed -->
         <video class="w-80 h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:opacity-0"
