--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ramadan</title>
     <link rel="icon" type="image/x-icon" href="example/bolls/Kirbo.png" />
     <meta name="author" content="YOLO-GIT" />
@@ -33,25 +33,23 @@
         </div>
     </nav>
 
-    <section class="parallax_mobile sm:parallax">
-        <div class="">
-            <!-- <img src="" id="struktur" alt="structure"> -->
-            <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
-            <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left" />
-            <img src="example/bolls/Another Design/shadow_right.png" id="shadow_right" alt="shadow_right" />
-            <img src="example/bolls/Another Design/13405423_5238218-ai.png" id="ayat" alt="ayat" />
-            <img src="example/bolls/Another Design/kiri.png" id="kiri" alt="kiri" />
-            <img src="example/bolls/Another Design/kanan.png" id="kanan" alt="kanan" />
-            <img src="example/bolls/Another Design/top.png" id="atas" alt="atas" />
-            <img src="example/bolls/Another Design/bottom.png" id="bottom" alt="bottom" />
-            <img src="example/bolls/Another Design/lamp.png" id="lamp" alt="lamp" />
-        </div>
+    <section class="parallax_mobile lg:parallax md:parallax_mid">
+        <!-- <img src="" id="struktur" alt="structure"> -->
+        <img src="example/bolls/Another Design/new_bg.png" id="bg" alt="bg" />
+        <img src="example/bolls/Another Design/shadow_left.png" id="shadow_left" alt="shadow_left" />
+        <img src="example/bolls/Another Design/shadow_right.png" id="shadow_right" alt="shadow_right" />
+        <img src="example/bolls/Another Design/13405423_5238218-ai.png" id="ayat" alt="ayat" />
+        <img src="example/bolls/Another Design/kiri.png" id="kiri" alt="kiri" />
+        <img src="example/bolls/Another Design/kanan.png" id="kanan" alt="kanan" />
+        <img src="example/bolls/Another Design/top.png" id="atas" alt="atas" />
+        <img src="example/bolls/Another Design/bottom.png" id="bottom" alt="bottom" />
+        <img src="example/bolls/Another Design/lamp.png" id="lamp" alt="lamp" />
     </section>
 
-    <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate md:mb-4 sm:mt-2">
+    <section class="sec bg-gradient-to-r from-blue-950 to-blue-500 background-animate mb-4 sm:mt-2 sm:mb-0">
         <h2 class="text-xs text-center sm:text-3xl sm:text-left font-semibold text-white flex flex-row">
             <svg data-tooltip-target="tooltip-one" xmlns="http://www.w3.org/2000/svg"
-                class="w-28 h-28 md:w-28 md:h-28 sm:w-10 sm:h-10 mr-3" fill-rule="evenodd" clip-rule="evenodd"
+                class="w-28 h-28 sm:w-10 sm:h-10 mr-3" fill-rule="evenodd" clip-rule="evenodd"
                 image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
                 text-rendering="geometricPrecision" viewBox="0 0 6.827 6.827" id="islam">
                 <path fill-rule="nonzero"
@@ -81,7 +79,7 @@
             </div>
             Selamat datang bulan Ramadan!
             <svg data-tooltip-target="tooltip-two" xmlns="http://www.w3.org/2000/svg"
-                class="w-28 h-28 md:w-28 md:h-28 sm:w-10 sm:h-10 ml-3" fill-rule="evenodd" clip-rule="evenodd"
+                class="w-28 h-28 sm:w-10 sm:h-10 ml-3" fill-rule="evenodd" clip-rule="evenodd"
                 image-rendering="optimizeQuality" shape-rendering="geometricPrecision"
                 text-rendering="geometricPrecision" viewBox="0 0 6.827 6.827" id="islam">
                 <path fill-rule="nonzero"
@@ -162,7 +160,7 @@
             Apa itu Puasa?
             <svg data-tooltip-target="tooltip-calendar" xmlns="http://www.w3.org/2000/svg"
                 enable-background="new 0 0 64 64" viewBox="0 0 64 64" id="ramadan-calendar"
-                class="w-20 h-20 md:w-20 md:h-20 sm:w-10 sm:h-10 ml-2">
+                class="w-20 h-20 sm:w-10 sm:h-10 ml-2">
                 <path fill="#eef" d="M58,17v35c0,2.761-2.239,5-5,5H11c-2.761,0-5-2.239-5-5V17H58z"></path>
                 <path fill="#02cfc4" d="M60,8v8c0,1.65-1.35,3-3,3H7c-1.65,0-3-1.35-3-3V8c0-1.65,1.35-3,3-3h6c0.01,0,0.01,0,0.02,0H57
 			C58.65,5,60,6.35,60,8z"></path>
@@ -196,8 +194,7 @@
     <div class="flex items-center justify-center h-80 bg-fixed sm:bg-parallax bg-cover bg-gradient-to-r from-blue-950
         to-blue-500 background-animate">
         <!-- some text if needed -->
-        <video class="w-80 h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:opacity-0"
-            controls>
+        <video class="w-80 h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:hidden" controls>
             <source src="example/HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4" />
             Your browser does not support the video tag.
         </video>
