Some hanges and Addition

--- a/index.html
+++ b/index.html
@@ -116,41 +116,191 @@
         </p>
     </section>
 
-    <section class="sec mx-7 mb-2 flex flex-wrap justify-center items-center sm:justify-start">
+    <section class="sec mx-7 mb-2 flex flex-wrap lg:flex-row justify-center items-center sm:justify-start">
         <div
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="example/bolls/Card/card_1.png" alt="" />
+                <img data-modal-target="default-one" data-modal-toggle="default-one" class="rounded-t-lg"
+                    src="example/bolls/Card/card_1.png" alt="" />
+            </div>
+        </div>
+        <div id="default-one" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+                <!-- Modal content -->
+                <div class="relative bg-slate-800 rounded-lg shadow">
+                    <img src="example/bolls/Card/card_1.png">
+                    <!-- Modal footer -->
+                    <div
+                        class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                        <div>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
+                                لِلَّٰهِ</button>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
+                                اللَّه</button>
+                        </div>
+                        <h1 class="text-white font-semibold italic hover:text-red-500">
+                            - YOLO-GIT
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
         <div
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="example/bolls/Card/card_2.png" alt="" />
+                <img data-modal-target="default-two" data-modal-toggle="default-two" class="rounded-t-lg"
+                    src="example/bolls/Card/card_2.png" alt="" />
+            </div>
+        </div>
+        <div id="default-two" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+                <!-- Modal content -->
+                <div class="relative bg-slate-800 rounded-lg shadow">
+                    <img src="example/bolls/Card/card_2.png">
+                    <!-- Modal footer -->
+                    <div
+                        class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                        <div>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
+                                لِلَّٰهِ</button>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
+                                اللَّه</button>
+                        </div>
+                        <h1 class="text-white font-semibold italic hover:text-red-500">
+                            - YOLO-GIT
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
         <div
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="example/bolls/Card/card_3.png" alt="" />
+                <img data-modal-target="default-three" data-modal-toggle="default-three" class="rounded-t-lg"
+                    src="example/bolls/Card/card_3.png" alt="" />
+            </div>
+        </div>
+        <div id="default-three" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+                <!-- Modal content -->
+                <div class="relative bg-slate-800 rounded-lg shadow">
+                    <img src="example/bolls/Card/card_3.png">
+                    <!-- Modal footer -->
+                    <div
+                        class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                        <div>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
+                                لِلَّٰهِ</button>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
+                                اللَّه</button>
+                        </div>
+                        <h1 class="text-white font-semibold italic hover:text-red-500">
+                            - YOLO-GIT
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
         <div
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="example/bolls/Card/card_4.png" alt="" />
+                <img data-modal-target="default-four" data-modal-toggle="default-four" class="rounded-t-lg"
+                    src="example/bolls/Card/card_4.png" alt="" />
+            </div>
+        </div>
+        <div id="default-four" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+                <!-- Modal content -->
+                <div class="relative bg-slate-800 rounded-lg shadow">
+                    <img src="example/bolls/Card/card_4.png">
+                    <!-- Modal footer -->
+                    <div
+                        class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                        <div>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
+                                لِلَّٰهِ</button>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
+                                اللَّه</button>
+                        </div>
+                        <h1 class="text-white font-semibold italic hover:text-red-500">
+                            - YOLO-GIT
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
         <div
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="example/bolls/Card/card_5.png" alt="" />
+                <img data-modal-target="default-five" data-modal-toggle="default-five" class="rounded-t-lg"
+                    src="example/bolls/Card/card_5.png" alt="" />
+            </div>
+        </div>
+        <div id="default-five" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+                <!-- Modal content -->
+                <div class="relative bg-slate-800 rounded-lg shadow">
+                    <img src="example/bolls/Card/card_5.png">
+                    <!-- Modal footer -->
+                    <div
+                        class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                        <div>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
+                                لِلَّٰهِ</button>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
+                                اللَّه</button>
+                        </div>
+                        <h1 class="text-white font-semibold italic hover:text-red-500">
+                            - YOLO-GIT
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
         <div
             class="lg:max-w-xs max-w-none bg-white border border-gray-200 rounded-lg shadow dark:bg-gray-800 dark:border-gray-700 mb-4 mx-2 transform transition-transform hover:scale-105 ease-in-out duration-500 hover:shadow-lg">
             <div>
-                <img class="rounded-t-lg" src="example/bolls/Card/card_6.png" alt="" />
+                <img data-modal-target="default-six" data-modal-toggle="default-six" class="rounded-t-lg"
+                    src="example/bolls/Card/card_6.png" alt="" />
+            </div>
+        </div>
+        <div id="default-six" tabindex="-1" aria-hidden="true"
+            class="hidden overflow-y-auto overflow-x-hidden fixed top-0 right-0 left-0 z-50 justify-center items-center w-full md:inset-0 h-[calc(100%-1rem)] max-h-full">
+            <div class="relative p-4 w-full max-w-2xl max-h-full">
+                <!-- Modal content -->
+                <div class="relative bg-slate-800 rounded-lg shadow">
+                    <img src="example/bolls/Card/card_6.png">
+                    <!-- Modal footer -->
+                    <div
+                        class="flex items-center justify-between p-4 md:p-5 border-t border-gray-200 rounded-b dark:border-gray-600">
+                        <div>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">ٱلْحَمْدُ
+                                لِلَّٰهِ</button>
+                            <button data-modal-hide="default-modal" type="button"
+                                class="py-2.5 px-5 ms-3 text-sm font-medium text-gray-900 focus:outline-none bg-white rounded-lg border border-gray-200 hover:bg-red-100 hover:text-blue-700 focus:z-10 focus:ring-4 focus:ring-gray-100 dark:focus:ring-gray-700 dark:bg-gray-800 dark:text-gray-400 dark:border-gray-600 dark:hover:text-white dark:hover:bg-gray-700">سُبْحَانَ
+                                اللَّه</button>
+                        </div>
+                        <h1 class="text-white font-semibold italic hover:text-red-500">
+                            - YOLO-GIT
+                        </h1>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -191,14 +341,33 @@
         </p>
     </section>
 
-    <div class="flex items-center justify-center h-80 bg-fixed sm:bg-parallax bg-cover bg-gradient-to-r from-blue-950
-        to-blue-500 background-animate">
-        <!-- some text if needed -->
-        <video class="w-80 h-auto max-w-full border border-blue-200 rounded-lg dark:border-blue-700 sm:hidden" controls>
-            <source src="example/HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4" />
-            Your browser does not support the video tag.
-        </video>
-    </div>
+    <section class="bg-white dark:bg-gray-900">
+        <div class="container mx-auto px-4 py-8 lg:py-16">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-8">
+                <div class="flex flex-col justify-center">
+                    <h1
+                        class="text-center sm:text-left hover:underline max-w-lg mb-4 text-4xl font-extrabold tracking-tight leading-none md:text-5xl xl:text-6xl dark:text-white">
+                        Nak pahala?
+                    </h1>
+                    <p
+                        class="text-center sm:text-left font-semibold max-w-lg mb-6 text-gray-500 md:text-lg lg:text-xl dark:text-gray-400">
+                        Sedekah itu amalan baik. Jadi sekiranya tidak keberatan, support saya dengan tekan link
+                        dibawah.<br>👇👇👇
+                    </p>
+                    <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js"
+                        data-name="bmc-button" data-slug="YOLOGIT" data-color="#FF5F5F" data-emoji="" data-font="Cookie"
+                        data-text="Buy me a coffee ❤️" data-outline-color="#000000" data-font-color="#ffffff"
+                        data-coffee-color="#FFDD00"></script>
+                </div>
+                <div class="hidden lg:flex">
+                    <video class="w-full h-auto max-w-full rounded-lg" controls>
+                        <source src="example/HADDAD ALWI ft ANTI - Marhaban Ya Ramadhan.mp4" type="video/mp4" />
+                        Your browser does not support the video tag.
+                    </video>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <section class="sec bg-slate-700">
         <h2 class="text-xs sm:text-3xl text-center sm:text-left font-semibold text-white">
@@ -218,11 +387,13 @@
                 <h2 class="uppercase">Socials</h2>
             </div>
 
-            <p class="text-lg text-center mb-8 text-white">
-                Feel free to reach out! You can contact me at
+            <p class="text-sm sm:text-xl text-center mb-8 text-white">
+                Feel free to reach out! You can contact me at<br>
                 <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=ahmadsufi345@gmail.com" target="_blank"
-                    class="no-underline hover:underline hover:text-red-500">ahmadsufi345@gmail.com</a>
-                or connect with me on social media.
+                    class="no-underline hover:underline hover:text-red-500 text-sm sm:text-xl">ahmadsufi345@gmail.com</a>
+                or<br><span
+                    class="hover:underline border rounded-md focus:outline-none border-none hover:bg-gradient-to-r from-blue-400 to-green-400">connect
+                    with me on social media.</span>
             </p>
 
             <ul class="flex mt-5 justify-center space-x-5">
